--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 												<h3>第十四週 Spring Boot</h3>
 												<p>Spring Boot 的CRUD和 JUnit4 測試</p>
 												<ul class="actions">
-													<li><a href="Java100Day/14Week.html" class="button big">Learn More</a></li>
+													<!-- <li><a href="Java100Day/14Week.html" class="button big">Learn More</a></li> -->
+													<li><a href="Java100Day_14week/14Week.html" class="button big">Learn More</a></li>
 												</ul>
 											</div>
 										</article>
