--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 										<li>
                                             <span class="opener">Java 100天</span>
 											<ul>
-                                                <li><a href="Java100Day/14Week.html">第十四週 Spring Boot</a></li>
+                                                <li><a href="Java100Day_14week/14Week.html">第十四週 Spring Boot</a></li>
 											</ul>
 											<a href="#indexJava100Day">跳至</a>
                                         </li>
