--- a/Java100Day_14week/92Day.html
+++ b/Java100Day_14week/92Day.html
@@ -150,7 +150,7 @@
                                         <p>開啟網頁前往http://localhost:8081/</p>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/92_8081.JPG" alt="" />
+                                                <img src="images/92_8081.jpg" alt="" />
                                             </span>
                                         </div>
 
