--- a/Java100Day_14week/94Day.html
+++ b/Java100Day_14week/94Day.html
@@ -203,7 +203,7 @@
                                         <h3>在com.example.demo.respository內建立interface VendorRespository</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_VendorRespository.JPG" alt="" />
+                                                <img src="images/94_VendorRespository.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
@@ -240,7 +240,7 @@
                                         <h3>在com.example.demo.service內建立interface VendorService</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_VendorService.JPG" alt="" />
+                                                <img src="images/94_VendorService.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
@@ -268,7 +268,7 @@
                                         <h3>在com.example.demo.service.impl內建立class VendorServiceImpl 實現VendorService</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_VendorServiceImpl.JPG" alt="" />
+                                                <img src="images/94_VendorServiceImpl.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
@@ -323,7 +323,7 @@
                                         <h3>在ccom.example.demo.controller內建立class VendorController</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_VendorController.JPG" alt="" />
+                                                <img src="images/94_VendorController.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
@@ -528,30 +528,30 @@
                                         <h2 id="94_Postman">用Postman 做測試</h2>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/92_Postman1.JPG" alt="" />
+                                                <img src="images/92_Postman1.jpg" alt="" />
                                             </span>
                                         </div>
                                         <h3>測試 save()</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_Save.JPG" alt="" />
+                                                <img src="images/94_Save.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_H2_Save.JPG" alt="" />
+                                                <img src="images/94_H2_Save.jpg" alt="" />
                                             </span>
                                         </div>
 
                                         <h3>測試 updata()</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_updata1.JPG" alt="" />
+                                                <img src="images/94_updata1.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_H2_updata1.JPG" alt="" />
+                                                <img src="images/94_H2_updata1.jpg" alt="" />
                                             </span>
                                         </div>
 
@@ -559,24 +559,24 @@
 
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_updata2.JPG" alt="" />
+                                                <img src="images/94_updata2.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_H2_updata2.JPG" alt="" />
+                                                <img src="images/94_H2_updata2.jpg" alt="" />
                                             </span>
                                         </div>
 
                                         <h3>測試 delete()</h3>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_delete.JPG" alt="" />
+                                                <img src="images/94_delete.jpg" alt="" />
                                             </span>
                                         </div>
                                         <div>
                                             <span class="image object">
-                                                <img src="images/94_H2_delete.JPG" alt="" />
+                                                <img src="images/94_H2_delete.jpg" alt="" />
                                             </span>
                                         </div>
 
