--- a/index.html
+++ b/index.html
@@ -51,22 +51,40 @@
 								</header>
 
 							<!-- Banner -->
-								<!-- <section id="banner">
+								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h2>許瑋元<br />
+												Java Software Engineer</h2>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<h3>緯創軟體股份有限公司</h3>
+										<p>Java Programmer<br />
+											到職日期2019年9月 - 2021年7月<br />
+											任職期間1 年 11 個月<br />
+											地點台灣 Taipei City 台北<br />
+											台北富邦 人壽 個險建議書系統(開發、維護) 2020 年 4 月 - 2021 年 7 月<br />
+											- 技術架構：C#、ASP.Net Webfrom、WebService、DB (Microsoft SQL Server)<br />
+											內部培訓<br />
+											- Java 8、Spring boot + Spring data JPA+Angular、Thymeleaf<br />
+											- C#、ASP.Net Core MVC<br />
+										</p>
+										<h3>Java雲端服務開發技術養成班科系Java</h3>
+										<p>日期2019年2月 – 2019年8月<br />
+											中壢資策會Java雲端技術養成班6人一組撰寫一個旅遊網站當作結訓專題。<br />
+											- 前台包括廠商會員申請、修改廠商資料、商品上架、訂單管理、訂單查詢、<br />
+											  廣告申請和影響商城商品價格<br />
+											- 後台包括管理員管理廠商申請、商品上架、廣告上架、單一廠商月結金額查詢、<br />
+											  複合查詢單一廠商
+											- 技術架構：Java 8、JavaEE+Servlet+JSP+Oracle、Redis<br />
+										</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+												<li><a href="https://www.linkedin.com/in/瑋元-許-a3377a18b" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/indexMe.jpg" alt="" />
 									</span>
-								</section> -->
+								</section>
 
 							<!-- Section -->
 								<section>
@@ -80,7 +98,6 @@
 												<h3>第十四週 Spring Boot</h3>
 												<p>Spring Boot 的CRUD和 JUnit4 測試</p>
 												<ul class="actions">
-													<!-- <li><a href="Java100Day/14Week.html" class="button big">Learn More</a></li> -->
 													<li><a href="Java100Day_14week/14Week.html" class="button big">Learn More</a></li>
 												</ul>
 											</div>
