--- a/Java100Day_14week/14Week.html
+++ b/Java100Day_14week/14Week.html
@@ -38,11 +38,11 @@
                             <hr class="major" />
     
                             <h2>第93天 Spring Boot 配置</h2>
-                            <!-- <p>基本配置</p>
+                            <p>基本配置</p>
                             <p></p>
                             <ul class="actions">
-                                <li><a href="14Week/93Day.html" class="button big">Learn More</a></li>
-                            </ul> -->
+                                <li><a href="93Day.html" class="button big">Learn More</a></li>
+                            </ul>
 
                             <hr class="major" />
     
