--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 									</header>
 									<div class="features">
 										<article>
+											<span class="icon solid fa-wrench"></span>
+											<div class="content">
+												<h3>第七週 工作上需要的其他</h3>
+												<p>Linux 基本指令</p>
+												<ul class="actions">
+													<li><a href="Java100Day_7week/7Week.html" class="button big">Learn More</a></li>
+												</ul>
+											</div>
+										</article>
+										<article>
 											<span class="icon solid fa-power-off"></span>
 											<div class="content">
 												<h3>第十四週 Spring Boot</h3>
@@ -211,6 +221,7 @@
 										<li>
                                             <span class="opener">Java 100天</span>
 											<ul>
+												<li><a href="Java100Day_7week/7Week.html">第七週 工作上需要的其他</a></li>
                                                 <li><a href="Java100Day_14week/14Week.html">第十四週 Spring Boot</a></li>
 											</ul>
 											<a href="#indexJava100Day">跳至</a>
