--- a/Java100Day_7week/7Week.html
+++ b/Java100Day_7week/7Week.html
@@ -38,6 +38,16 @@
                             <hr class="major" />
     
                             <h2>第44天 Linux 指令</h2>
+                            <p>1.基本<br />
+                                2.實用<br />
+                                3.用戶管理<br />
+                                4.磁碟管理<br />
+                                5.配置服務<br />
+                                6.網路訪問與管理<br />
+                                7.進程管理<br />
+                                8.系統診斷<br />
+                                9.常用快捷鍵<br />
+                            </p>
                             <ul class="actions">
                                 <li><a href="44Day.html" class="button big">Learn More</a></li>
                             </ul>
@@ -91,7 +101,7 @@
 								<li>
 									<span class="opener">Java 100天</span>
 									<ul>
-                                        <li><a href="14Week.html">第七週 工作上需要的其他</a></li>
+                                        <li><a href="7Week.html">第七週 工作上需要的其他</a></li>
                                         <ul>
                                             <!-- <li><a href="92Day.html">第92天 Spring Boot 環境建置</a></li> -->
                                             <li><a href="44Day.html">第44天 Linux 指令</a></li>
