--- a/index.html
+++ b/index.html
@@ -246,6 +246,13 @@
 											</ul>
                                             <a href="#indexDesign">跳至</a>
 										</li>
+										<li>
+                                            <span class="opener">Java Job 上會用到的工具</span>
+											<ul>
+												<li><a href="JavaJob_Jenkins_1/JenkinsIndex.html">Jenkins</a></li>
+											</ul>
+											<!-- <a href="#indexJava100Day">跳至</a> -->
+                                        </li>
                                         <li><a href="index.html">Homepage</a></li>
 									</ul>
 								</nav>
