--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
 										<li>
                                             <span class="opener">Java Job 上會用到的工具</span>
 											<ul>
-												<li><a href="JavaJob_Jenkins_1/JenkinsIndex.html">Jenkins</a></li>
+												<li><a href="JavaJob_Maven_1/MavenIndex.html">Maven</a>
+												<!-- <li><a href="JavaJob_Jenkins_1/JenkinsIndex.html">Jenkins</a></li> -->
 											</ul>
 											<!-- <a href="#indexJava100Day">跳至</a> -->
                                         </li>
