--- a/JavaJob_Maven_1/2Day.html
+++ b/JavaJob_Maven_1/2Day.html
@@ -29,18 +29,60 @@
 						<section>
 
                             <header class="main">
-                                <h1>第1天</h1>
-                                <h1>Maven環境建置</h1>
-                                <h1>建立第一個maven專案</h1>
+                                <h1>第2天</h1>
+                                <h1>Maven 專案建置生命週期</h1>
                             </header>
 
                             <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
                             <hr class="major" />
 
-                            <h2>前言</h2>
-                            <p>主要參考 Maven in 5 Minutes</p>
-                            <p>希望在工作上對於使用的Maven 可以多了解一些</p>
+                            <h2>Maven 三個基本 專案建置生命週期</h2>
+                            <p>clean</p>
+                            <p>default</p>
+                            <p>site</p>
+
+                            <div class="table-wrapper">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>階段</th>
+                                            <th>功能說明</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>validate</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>compile</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>test</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>package</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>verify</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>install</td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>deploy</td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
                             <hr class="major" />
 
                             <h2>第一步 Maven環境建置</h2>
