--- a/JavaJob_Maven_1/3Day.html
+++ b/JavaJob_Maven_1/3Day.html
@@ -168,10 +168,30 @@
                                             <td>mvn -T or --threads</td>
                                             <td>線程數</td>
                                         </tr>
+                                        <!-- <tr>
+                                            <td>mvn -t or--toolchains</td>
+                                            <td>備用路徑</td>
+                                        </tr> -->
+                                        <!-- <tr>
+                                            <td>mvn -U or --update-snapshots</td>
+                                            <td></td>
+                                        </tr> -->
+                                        <tr>
+                                            <td>mvn -up or--update-plugins</td>
+                                            <td>無效，兼容用</td>
+                                        </tr>
                                         <tr>
                                             <td>mvn -V or --show-version</td>
                                             <td>顯示版本訊息,後面可以繼續執行其他步驟</td>
                                         </tr>
+                                        <tr>
+                                            <td>mvn -v or --version</td>
+                                            <td>顯示版本訊息</td>
+                                        </tr>
+                                        <!-- <tr>
+                                            <td>mvn -X or --debug</td>
+                                            <td></td>
+                                        </tr> -->
                                         <!-- <tr>
                                             <td>mvn -pl or --module_name</td>
                                             <td>複製命名剪切的內容</td>
